tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/gateway/HTTP/to_headless.echo/_test_context/Gateway-VirtualService.1256967873.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-98059
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: headless.echo-2-98059.svc.cluster.local
  namespace: echo-2-98059
spec:
  gateways:
  - gateway
  hosts:
  - headless.echo-2-98059.svc.cluster.local
  http:
  - route:
    - destination:
        host: headless.echo-2-98059.svc.cluster.local
        port:
          number: 18080
